[package]
name = "laskea-bindings"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
description = "Bindings to the laskea engine for incremental compilation"
license = "MIT or Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
laskea-engine = { version = "0.1.0", path = "../engine" }
salsa = "0.16.1"
js-sys = "0.3.55"

# Required to make sure the "instant" uses the right imports
# See https://github.com/rustwasm/wasm-bindgen/issues/2215#issuecomment-796244209
parking_lot = { version = "0.11.2", features = ["wasm-bindgen"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
