[package]
name = "laskea-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = "0.16.1"
serde = { version = "1.0.133", features = ["derive", "rc"] }
serde_json = "1.0.74"

[dev-dependencies]
pretty_assertions = "1.0.0"
